fixing HTML navbar

--- a/IiendaOnline.html
+++ b/IiendaOnline.html
@@ -14,16 +14,10 @@
 </head>
 
 <body class="tienda" style="display: flex; flex-direction: column; min-height: 100vh;">
-<<<<<<< HEAD
 
   <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
-=======
-  <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/streetek/streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
->>>>>>> b9d1ebb1be3eb691b70cbe8e5050ca59d6f4f329
+      <a class="navbar-brand" href="./streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
           width="165px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,31 +26,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
+            <a class="nav-link active" aria-current="page" href="./Quienes-somos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+            <a class="nav-link" href="./Productos.html">Nuestros productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
+            <a class="nav-link" href="./Contacto.html">Contacto</a>
           </li>
-<<<<<<< HEAD
-          <li class="nav-item">
-            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
-=======
->>>>>>> b9d1ebb1be3eb691b70cbe8e5050ca59d6f4f329
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Idioma
-            </a>
-<<<<<<< HEAD
-=======
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
-              <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
-            </ul>
->>>>>>> b9d1ebb1be3eb691b70cbe8e5050ca59d6f4f329
           </li>
         </ul>
       </div>
