--- a/Contacto.html
+++ b/Contacto.html
@@ -9,41 +9,10 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <header>
-<<<<<<< HEAD
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../streetek/streetek3d.html">Streetek 3D</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Contacto
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-=======
+
   <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/streetek/streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+      <a class="navbar-brand" href="./streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
           width="165px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,30 +21,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
+            <a class="nav-link active" aria-current="page" href="./Quienes-somos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+            <a class="nav-link" href="./Productos.html">Nuestros productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
+            <a class="nav-link" href="./Contacto.html">Contacto</a>
           </li>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Idioma
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
-              <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
-            </ul>
           </li>
         </ul>
       </div>
     </div>
   </nav>
->>>>>>> b9d1ebb1be3eb691b70cbe8e5050ca59d6f4f329
-    </header>
     <br><br><br><br><br>
     <main>
         <div class="container text-center justify-content-center">
