--- a/streetek3d.html
+++ b/streetek3d.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/streetek/streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+      <a class="navbar-brand" href="./streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
           width="165px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,19 +23,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
+            <a class="nav-link active" aria-current="page" href="./Quienes-somos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+            <a class="nav-link" href="./Productos.html">Nuestros productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
+            <a class="nav-link" href="./Contacto.html">Contacto</a>
           </li>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Idioma
-            </a>
           </li>
         </ul>
       </div>
