arreglos al nav

--- a/Contacto.html
+++ b/Contacto.html
@@ -38,7 +38,7 @@
     <br><br><br><br><br>
     <main>
         <div class="container text-center justify-content-center">
-            <h2>Contacto</h2>
+            <h2 style="font-weight: bold;">Contacto</h2>
             <p>Para más información, por favor contáctenos a través de nuestras redes sociales.</p>
         <div class="d-flex justify-content-center">
             <img class="map" src="../images/image.png" alt="LinkedIn_icon.svg.png" width="500px">
