--- a/Productos.html
+++ b/Productos.html
@@ -40,7 +40,7 @@
   <div class="container text-center flex-grow-1">
   <div class="row align-items-start">
     <div class="col-12 col-md-4 producto-col">
-      <h2>Bancos 3D</h2>
+      <h2 style="font-weight: bold;">Bancos 3D</h2>
       <p class="text-hidden texto">Banco urbano fabricado mediante impresión 3D con plásticos reciclados, diseñado para su uso en espacios públicos como calles, parques, 
         patios escolares y zonas de descanso.Su diseño es personalizable, resistente a la intemperie y de bajo mantenimiento, contribuyendo a la 
         economía circular y a la mejora del bienestar urbano. Está disponible en versión individual o modular, permitiendo adaptarse a diferentes 
@@ -48,14 +48,14 @@
         <img src="../images/banco.png" class="imagen img-fluid img-product">
     </div>
     <div class="col-12 col-md-4 producto-col">
-      <h2>Papelera 3D</h2>
+      <h2 style="font-weight: bold;">Papelera 3D</h2>
       <p class="text-hidden texto">Papelera urbana fabricada con materiales reciclados e integrada con un dispositivo IoT que incorpora un sensor de ultrasonidos para medir 
         el nivel de llenado. Este sistema permite optimizar la gestión de residuos, reducir costes de recogida y mejorar la limpieza urbana mediante 
         el control remoto del estado de la papelera, facilitando una gestión más eficiente y sostenible de los espacios públicos.</p>
         <img src="../images/papelera.png" class="imagen img-fluid img-product">
     </div>
     <div class="col-12 col-md-4 producto-col">
-      <h2>Previsualizacion de producto en VR</h2>
+      <h2 style="font-weight: bold;">Previsualizacion de producto en VR</h2>
       <p class="text-hidden texto">Servicio de realidad virtual aplicada al mobiliario urbano, que permite visualizar y planificar la instalación de productos en entornos reales antes de 
         su fabricación o colocación. Está dirigido a ayuntamientos y empresas de mobiliario, e incluye formación específica para el uso de la herramienta, 
         reduciendo errores, mejorando la toma de decisiones y optimizando los resultados finales de cada proyecto.</p>
