--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -38,7 +38,7 @@
 <!--inicio-->
 <section class="container py-5 flex-grow-1" id="quienes-somos">
   <div class="text-center mb-5">
-    <h2 class="fw-bold">Quiénes somos</h2>
+    <h2 class="fw-bold" style="font-weight: bold;">Quiénes somos</h2>
     <p class="text-muted">
       Un equipo comprometido con la innovación, la sostenibilidad y el diseño urbano.
     </p>
