--- a/streetek3d.html
+++ b/streetek3d.html
@@ -31,6 +31,12 @@
           <li class="nav-item">
             <a class="nav-link" href="./Contacto.html">Contacto</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://52.44.20.17/wordpress">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Moodle</a>
+          </li>
           </li>
           </li>
         </ul>
