--- a/Productos.html
+++ b/Productos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../Styles.css">
   </head>
     <body>
+
   <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="./streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
@@ -27,13 +28,18 @@
           <li class="nav-item">
             <a class="nav-link" href="./Contacto.html">Contacto</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://52.44.20.17/wordpress">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://98.86.85.51/moodle/">Moodle</a>
+          </li>
           </li>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
-  
+  </nav>  
   <br><br><br><br><br><br><br><br>
 
   <!--column-->
