--- a/IiendaOnline.html
+++ b/IiendaOnline.html
@@ -15,6 +15,7 @@
 
 <body class="tienda" style="display: flex; flex-direction: column; min-height: 100vh;">
 
+
   <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="./streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
@@ -33,6 +34,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://52.44.20.17/wordpress">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://98.86.85.51/moodle/">Moodle</a>
           </li>
           </li>
           </li>
