--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <!--Nav-->
-    <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
+
+  <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="./streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
           width="165px"></a>
@@ -27,6 +28,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://52.44.20.17/wordpress">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://98.86.85.51/moodle/">Moodle</a>
           </li>
           </li>
           </li>
