--- a/streetek3d.html
+++ b/streetek3d.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="http://52.44.20.17/wordpress">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Moodle</a>
+            <a class="nav-link" href="http://98.86.85.51/moodle/">Moodle</a>
           </li>
           </li>
           </li>
