--- a/streetek3d.html
+++ b/streetek3d.html
@@ -91,6 +91,8 @@
       Además, ofrecemos la posibilidad de previsualizar los productos en entornos de realidad virtual y aumentada antes
       de su fabricación, permitiendo a clientes y ciudadanos participar en el diseño final y asegurando una integración
       perfecta en el entorno urbano.
+
+      <img class="img-fluid" src="../images/products.png" width="550px">
     </p>
 
 
