--- a/streetek3d.html
+++ b/streetek3d.html
@@ -74,7 +74,7 @@
     </p>
 
 
-    <a href="../Nosotros/Quienes-somos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">leer
+    <a href="/Quienes-somos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Leer
         más</button></a>
 
 
